qt-restricted-extras/qscintilla/gen_qsciscintilla.h

typedef struct QColor QColor;
typedef struct QIODevice QIODevice;
typedef struct QPoint QPoint;
typedef struct QsciCommandSet QsciCommandSet;
typedef struct QsciDocument QsciDocument;
typedef struct QsciScintilla QsciScintilla;
typedef struct QsciStyle QsciStyle;
typedef struct QsciStyledText QsciStyledText;
void QsciScintilla_replace(QsciScintilla* self, struct miqt_string replaceStr);
void QsciScintilla_resetFoldMarginColors(QsciScintilla* self);
void QsciScintilla_resetHotspotBackgroundColor(QsciScintilla* self);
void QsciScintilla_resetHotspotForegroundColor(QsciScintilla* self);
int QsciScintilla_scrollWidth(const QsciScintilla* self);
bool QsciScintilla_scrollWidthTracking(const QsciScintilla* self);
void QsciScintilla_setFoldMarginColors(QsciScintilla* self, QColor* fore, QColor* back);
void QsciScintilla_setAnnotationDisplay(QsciScintilla* self, int display);
void QsciScintilla_setAutoCompletionFillupsEnabled(QsciScintilla* self, bool enabled);
void QsciScintilla_setAutoCompletionFillups(QsciScintilla* self, const char* fillups);
void QsciScintilla_setAutoCompletionWordSeparators(QsciScintilla* self, struct miqt_array /* of struct miqt_string */  separators);
void QsciScintilla_setCallTipsBackgroundColor(QsciScintilla* self, QColor* col);
void QsciScintilla_setCallTipsForegroundColor(QsciScintilla* self, QColor* col);
void QsciScintilla_setCallTipsHighlightColor(QsciScintilla* self, QColor* col);
void QsciScintilla_setCallTipsPosition(QsciScintilla* self, int position);
void QsciScintilla_setCallTipsStyle(QsciScintilla* self, int style);
void QsciScintilla_setCallTipsVisible(QsciScintilla* self, int nr);
void QsciScintilla_setContractedFolds(QsciScintilla* self, struct miqt_array /* of int */  folds);
void QsciScintilla_setDocument(QsciScintilla* self, QsciDocument* document);
void QsciScintilla_addEdgeColumn(QsciScintilla* self, int colnr, QColor* col);
void QsciScintilla_clearEdgeColumns(QsciScintilla* self);
void QsciScintilla_setEdgeColor(QsciScintilla* self, QColor* col);
void QsciScintilla_setEdgeColumn(QsciScintilla* self, int colnr);
void QsciScintilla_setEdgeMode(QsciScintilla* self, int mode);
void QsciScintilla_setFirstVisibleLine(QsciScintilla* self, int linenr);
void QsciScintilla_setIndicatorDrawUnder(QsciScintilla* self, bool under);
void QsciScintilla_setIndicatorForegroundColor(QsciScintilla* self, QColor* col);
void QsciScintilla_setIndicatorHoverForegroundColor(QsciScintilla* self, QColor* col);
void QsciScintilla_setIndicatorHoverStyle(QsciScintilla* self, int style);
void QsciScintilla_setIndicatorOutlineColor(QsciScintilla* self, QColor* col);
void QsciScintilla_setMarginBackgroundColor(QsciScintilla* self, int margin, QColor* col);
void QsciScintilla_setMarginOptions(QsciScintilla* self, int options);
void QsciScintilla_setMarginText(QsciScintilla* self, int line, struct miqt_string text, int style);
void QsciScintilla_setMarginText2(QsciScintilla* self, int line, struct miqt_string text, QsciStyle* style);
void QsciScintilla_setMarginText3(QsciScintilla* self, int line, QsciStyledText* text);
void QsciScintilla_setMarginType(QsciScintilla* self, int margin, int type);
void QsciScintilla_clearMarginText(QsciScintilla* self);
void QsciScintilla_setMargins(QsciScintilla* self, int margins);
void QsciScintilla_setMarkerBackgroundColor(QsciScintilla* self, QColor* col);
void QsciScintilla_setMarkerForegroundColor(QsciScintilla* self, QColor* col);
void QsciScintilla_setMatchedBraceBackgroundColor(QsciScintilla* self, QColor* col);
void QsciScintilla_setMatchedBraceForegroundColor(QsciScintilla* self, QColor* col);
void QsciScintilla_setMatchedBraceIndicator(QsciScintilla* self, int indicatorNumber);
void QsciScintilla_resetMatchedBraceIndicator(QsciScintilla* self);
void QsciScintilla_setScrollWidth(QsciScintilla* self, int pixelWidth);
void QsciScintilla_setScrollWidthTracking(QsciScintilla* self, bool enabled);
void QsciScintilla_setTabDrawMode(QsciScintilla* self, int mode);
void QsciScintilla_setUnmatchedBraceBackgroundColor(QsciScintilla* self, QColor* col);
void QsciScintilla_setUnmatchedBraceForegroundColor(QsciScintilla* self, QColor* col);
void QsciScintilla_setUnmatchedBraceIndicator(QsciScintilla* self, int indicatorNumber);
void QsciScintilla_resetUnmatchedBraceIndicator(QsciScintilla* self);
void QsciScintilla_setWrapVisualFlags(QsciScintilla* self, int endFlag);
struct miqt_string QsciScintilla_selectedText(const QsciScintilla* self);
bool QsciScintilla_selectionToEol(const QsciScintilla* self);
void QsciScintilla_setHotspotBackgroundColor(QsciScintilla* self, QColor* col);
void QsciScintilla_setHotspotForegroundColor(QsciScintilla* self, QColor* col);
void QsciScintilla_setHotspotUnderline(QsciScintilla* self, bool enable);
void QsciScintilla_setHotspotWrap(QsciScintilla* self, bool enable);
void QsciScintilla_setSelectionToEol(QsciScintilla* self, bool filled);
void QsciScintilla_setExtraAscent(QsciScintilla* self, int extra);
void QsciScintilla_setExtraDescent(QsciScintilla* self, int extra);
void QsciScintilla_setOverwriteMode(QsciScintilla* self, bool overwrite);
void QsciScintilla_setWhitespaceBackgroundColor(QsciScintilla* self, QColor* col);
void QsciScintilla_setWhitespaceForegroundColor(QsciScintilla* self, QColor* col);
void QsciScintilla_setWhitespaceSize(QsciScintilla* self, int size);
void QsciScintilla_setWrapIndentMode(QsciScintilla* self, int mode);
void QsciScintilla_showUserList(QsciScintilla* self, int id, struct miqt_array /* of struct miqt_string */  list);
QsciCommandSet* QsciScintilla_standardCommands(const QsciScintilla* self);
int QsciScintilla_tabDrawMode(const QsciScintilla* self);
bool QsciScintilla_tabIndents(const QsciScintilla* self);
int QsciScintilla_tabWidth(const QsciScintilla* self);
struct miqt_string QsciScintilla_text(const QsciScintilla* self);
struct miqt_string QsciScintilla_textWithLine(const QsciScintilla* self, int line);
struct miqt_string QsciScintilla_text2(const QsciScintilla* self, int start, int end);
int QsciScintilla_textHeight(const QsciScintilla* self, int linenr);
int QsciScintilla_whitespaceSize(const QsciScintilla* self);
int QsciScintilla_whitespaceVisibility(const QsciScintilla* self);
struct miqt_string QsciScintilla_wordAtLineIndex(const QsciScintilla* self, int line, int index);
struct miqt_string QsciScintilla_wordAtPoint(const QsciScintilla* self, QPoint* point);
const char* QsciScintilla_wordCharacters(const QsciScintilla* self);
int QsciScintilla_wrapMode(const QsciScintilla* self);
int QsciScintilla_wrapIndentMode(const QsciScintilla* self);
bool QsciScintilla_write(const QsciScintilla* self, QIODevice* io);
void QsciScintilla_append(QsciScintilla* self, struct miqt_string text);
void QsciScintilla_autoCompleteFromAll(QsciScintilla* self);
void QsciScintilla_autoCompleteFromAPIs(QsciScintilla* self);
void QsciScintilla_autoCompleteFromDocument(QsciScintilla* self);
void QsciScintilla_callTip(QsciScintilla* self);
void QsciScintilla_clear(QsciScintilla* self);
void QsciScintilla_copy(QsciScintilla* self);
void QsciScintilla_cut(QsciScintilla* self);
void QsciScintilla_ensureCursorVisible(QsciScintilla* self);
void QsciScintilla_ensureLineVisible(QsciScintilla* self, int line);
void QsciScintilla_foldAll(QsciScintilla* self, bool children);
void QsciScintilla_foldLine(QsciScintilla* self, int line);
void QsciScintilla_indent(QsciScintilla* self, int line);
void QsciScintilla_insert(QsciScintilla* self, struct miqt_string text);
void QsciScintilla_insertAt(QsciScintilla* self, struct miqt_string text, int line, int index);