qt-restricted-extras/qscintilla/gen_qsciscintilla.nim

proc fcQsciScintilla_replace(self: pointer, replaceStr: struct_miqt_string): void {.importc: "QsciScintilla_replace".}
proc fcQsciScintilla_resetFoldMarginColors(self: pointer, ): void {.importc: "QsciScintilla_resetFoldMarginColors".}
proc fcQsciScintilla_resetHotspotBackgroundColor(self: pointer, ): void {.importc: "QsciScintilla_resetHotspotBackgroundColor".}
proc fcQsciScintilla_resetHotspotForegroundColor(self: pointer, ): void {.importc: "QsciScintilla_resetHotspotForegroundColor".}
proc fcQsciScintilla_scrollWidth(self: pointer, ): cint {.importc: "QsciScintilla_scrollWidth".}
proc fcQsciScintilla_scrollWidthTracking(self: pointer, ): bool {.importc: "QsciScintilla_scrollWidthTracking".}
proc fcQsciScintilla_setFoldMarginColors(self: pointer, fore: pointer, back: pointer): void {.importc: "QsciScintilla_setFoldMarginColors".}
proc fcQsciScintilla_setAnnotationDisplay(self: pointer, display: cint): void {.importc: "QsciScintilla_setAnnotationDisplay".}
proc fcQsciScintilla_setAutoCompletionFillupsEnabled(self: pointer, enabled: bool): void {.importc: "QsciScintilla_setAutoCompletionFillupsEnabled".}
proc fcQsciScintilla_setAutoCompletionFillups(self: pointer, fillups: cstring): void {.importc: "QsciScintilla_setAutoCompletionFillups".}
proc fcQsciScintilla_setAutoCompletionWordSeparators(self: pointer, separators: struct_miqt_array): void {.importc: "QsciScintilla_setAutoCompletionWordSeparators".}
proc fcQsciScintilla_setCallTipsBackgroundColor(self: pointer, col: pointer): void {.importc: "QsciScintilla_setCallTipsBackgroundColor".}
proc fcQsciScintilla_setCallTipsForegroundColor(self: pointer, col: pointer): void {.importc: "QsciScintilla_setCallTipsForegroundColor".}
proc fcQsciScintilla_setCallTipsHighlightColor(self: pointer, col: pointer): void {.importc: "QsciScintilla_setCallTipsHighlightColor".}
proc fcQsciScintilla_setCallTipsPosition(self: pointer, position: cint): void {.importc: "QsciScintilla_setCallTipsPosition".}
proc fcQsciScintilla_setCallTipsStyle(self: pointer, style: cint): void {.importc: "QsciScintilla_setCallTipsStyle".}
proc fcQsciScintilla_setCallTipsVisible(self: pointer, nr: cint): void {.importc: "QsciScintilla_setCallTipsVisible".}
proc fcQsciScintilla_setContractedFolds(self: pointer, folds: struct_miqt_array): void {.importc: "QsciScintilla_setContractedFolds".}
proc fcQsciScintilla_setDocument(self: pointer, document: pointer): void {.importc: "QsciScintilla_setDocument".}
proc fcQsciScintilla_addEdgeColumn(self: pointer, colnr: cint, col: pointer): void {.importc: "QsciScintilla_addEdgeColumn".}
proc fcQsciScintilla_clearEdgeColumns(self: pointer, ): void {.importc: "QsciScintilla_clearEdgeColumns".}
proc fcQsciScintilla_setEdgeColor(self: pointer, col: pointer): void {.importc: "QsciScintilla_setEdgeColor".}
proc fcQsciScintilla_setEdgeColumn(self: pointer, colnr: cint): void {.importc: "QsciScintilla_setEdgeColumn".}
proc fcQsciScintilla_setEdgeMode(self: pointer, mode: cint): void {.importc: "QsciScintilla_setEdgeMode".}
proc fcQsciScintilla_setFirstVisibleLine(self: pointer, linenr: cint): void {.importc: "QsciScintilla_setFirstVisibleLine".}
proc fcQsciScintilla_setIndicatorDrawUnder(self: pointer, under: bool): void {.importc: "QsciScintilla_setIndicatorDrawUnder".}
proc fcQsciScintilla_setIndicatorForegroundColor(self: pointer, col: pointer): void {.importc: "QsciScintilla_setIndicatorForegroundColor".}
proc fcQsciScintilla_setIndicatorHoverForegroundColor(self: pointer, col: pointer): void {.importc: "QsciScintilla_setIndicatorHoverForegroundColor".}
proc fcQsciScintilla_setIndicatorHoverStyle(self: pointer, style: cint): void {.importc: "QsciScintilla_setIndicatorHoverStyle".}
proc fcQsciScintilla_setIndicatorOutlineColor(self: pointer, col: pointer): void {.importc: "QsciScintilla_setIndicatorOutlineColor".}
proc fcQsciScintilla_setMarginBackgroundColor(self: pointer, margin: cint, col: pointer): void {.importc: "QsciScintilla_setMarginBackgroundColor".}
proc fcQsciScintilla_setMarginOptions(self: pointer, options: cint): void {.importc: "QsciScintilla_setMarginOptions".}
proc fcQsciScintilla_setMarginText(self: pointer, line: cint, text: struct_miqt_string, style: cint): void {.importc: "QsciScintilla_setMarginText".}
proc fcQsciScintilla_setMarginText2(self: pointer, line: cint, text: struct_miqt_string, style: pointer): void {.importc: "QsciScintilla_setMarginText2".}
proc fcQsciScintilla_setMarginText3(self: pointer, line: cint, text: pointer): void {.importc: "QsciScintilla_setMarginText3".}
proc fcQsciScintilla_setMarginType(self: pointer, margin: cint, typeVal: cint): void {.importc: "QsciScintilla_setMarginType".}
proc fcQsciScintilla_clearMarginText(self: pointer, ): void {.importc: "QsciScintilla_clearMarginText".}
proc fcQsciScintilla_setMargins(self: pointer, margins: cint): void {.importc: "QsciScintilla_setMargins".}
proc fcQsciScintilla_setMarkerBackgroundColor(self: pointer, col: pointer): void {.importc: "QsciScintilla_setMarkerBackgroundColor".}
proc fcQsciScintilla_setMarkerForegroundColor(self: pointer, col: pointer): void {.importc: "QsciScintilla_setMarkerForegroundColor".}
proc fcQsciScintilla_setMatchedBraceBackgroundColor(self: pointer, col: pointer): void {.importc: "QsciScintilla_setMatchedBraceBackgroundColor".}
proc fcQsciScintilla_setMatchedBraceForegroundColor(self: pointer, col: pointer): void {.importc: "QsciScintilla_setMatchedBraceForegroundColor".}
proc fcQsciScintilla_setMatchedBraceIndicator(self: pointer, indicatorNumber: cint): void {.importc: "QsciScintilla_setMatchedBraceIndicator".}
proc fcQsciScintilla_resetMatchedBraceIndicator(self: pointer, ): void {.importc: "QsciScintilla_resetMatchedBraceIndicator".}
proc fcQsciScintilla_setScrollWidth(self: pointer, pixelWidth: cint): void {.importc: "QsciScintilla_setScrollWidth".}
proc fcQsciScintilla_setScrollWidthTracking(self: pointer, enabled: bool): void {.importc: "QsciScintilla_setScrollWidthTracking".}
proc fcQsciScintilla_setTabDrawMode(self: pointer, mode: cint): void {.importc: "QsciScintilla_setTabDrawMode".}
proc fcQsciScintilla_setUnmatchedBraceBackgroundColor(self: pointer, col: pointer): void {.importc: "QsciScintilla_setUnmatchedBraceBackgroundColor".}
proc fcQsciScintilla_setUnmatchedBraceForegroundColor(self: pointer, col: pointer): void {.importc: "QsciScintilla_setUnmatchedBraceForegroundColor".}
proc fcQsciScintilla_setUnmatchedBraceIndicator(self: pointer, indicatorNumber: cint): void {.importc: "QsciScintilla_setUnmatchedBraceIndicator".}
proc fcQsciScintilla_resetUnmatchedBraceIndicator(self: pointer, ): void {.importc: "QsciScintilla_resetUnmatchedBraceIndicator".}
proc fcQsciScintilla_setWrapVisualFlags(self: pointer, endFlag: cint): void {.importc: "QsciScintilla_setWrapVisualFlags".}
proc fcQsciScintilla_selectedText(self: pointer, ): struct_miqt_string {.importc: "QsciScintilla_selectedText".}
proc fcQsciScintilla_selectionToEol(self: pointer, ): bool {.importc: "QsciScintilla_selectionToEol".}
proc fcQsciScintilla_setHotspotBackgroundColor(self: pointer, col: pointer): void {.importc: "QsciScintilla_setHotspotBackgroundColor".}
proc fcQsciScintilla_setHotspotForegroundColor(self: pointer, col: pointer): void {.importc: "QsciScintilla_setHotspotForegroundColor".}
proc fcQsciScintilla_setHotspotUnderline(self: pointer, enable: bool): void {.importc: "QsciScintilla_setHotspotUnderline".}
proc fcQsciScintilla_setHotspotWrap(self: pointer, enable: bool): void {.importc: "QsciScintilla_setHotspotWrap".}
proc fcQsciScintilla_setSelectionToEol(self: pointer, filled: bool): void {.importc: "QsciScintilla_setSelectionToEol".}
proc fcQsciScintilla_setExtraAscent(self: pointer, extra: cint): void {.importc: "QsciScintilla_setExtraAscent".}
proc fcQsciScintilla_setExtraDescent(self: pointer, extra: cint): void {.importc: "QsciScintilla_setExtraDescent".}
proc fcQsciScintilla_setOverwriteMode(self: pointer, overwrite: bool): void {.importc: "QsciScintilla_setOverwriteMode".}
proc fcQsciScintilla_setWhitespaceBackgroundColor(self: pointer, col: pointer): void {.importc: "QsciScintilla_setWhitespaceBackgroundColor".}
proc fcQsciScintilla_setWhitespaceForegroundColor(self: pointer, col: pointer): void {.importc: "QsciScintilla_setWhitespaceForegroundColor".}
proc fcQsciScintilla_setWhitespaceSize(self: pointer, size: cint): void {.importc: "QsciScintilla_setWhitespaceSize".}
proc fcQsciScintilla_setWrapIndentMode(self: pointer, mode: cint): void {.importc: "QsciScintilla_setWrapIndentMode".}
proc fcQsciScintilla_showUserList(self: pointer, id: cint, list: struct_miqt_array): void {.importc: "QsciScintilla_showUserList".}
proc fcQsciScintilla_standardCommands(self: pointer, ): pointer {.importc: "QsciScintilla_standardCommands".}
proc fcQsciScintilla_tabDrawMode(self: pointer, ): cint {.importc: "QsciScintilla_tabDrawMode".}
proc fcQsciScintilla_tabIndents(self: pointer, ): bool {.importc: "QsciScintilla_tabIndents".}
proc fcQsciScintilla_tabWidth(self: pointer, ): cint {.importc: "QsciScintilla_tabWidth".}
proc fcQsciScintilla_text(self: pointer, ): struct_miqt_string {.importc: "QsciScintilla_text".}
proc fcQsciScintilla_textWithLine(self: pointer, line: cint): struct_miqt_string {.importc: "QsciScintilla_textWithLine".}
proc fcQsciScintilla_text2(self: pointer, start: cint, endVal: cint): struct_miqt_string {.importc: "QsciScintilla_text2".}
proc fcQsciScintilla_textHeight(self: pointer, linenr: cint): cint {.importc: "QsciScintilla_textHeight".}
proc fcQsciScintilla_whitespaceSize(self: pointer, ): cint {.importc: "QsciScintilla_whitespaceSize".}
proc fcQsciScintilla_whitespaceVisibility(self: pointer, ): cint {.importc: "QsciScintilla_whitespaceVisibility".}
proc fcQsciScintilla_wordAtLineIndex(self: pointer, line: cint, index: cint): struct_miqt_string {.importc: "QsciScintilla_wordAtLineIndex".}
proc fcQsciScintilla_wordAtPoint(self: pointer, point: pointer): struct_miqt_string {.importc: "QsciScintilla_wordAtPoint".}
proc fcQsciScintilla_wordCharacters(self: pointer, ): cstring {.importc: "QsciScintilla_wordCharacters".}
proc fcQsciScintilla_wrapMode(self: pointer, ): cint {.importc: "QsciScintilla_wrapMode".}
proc fcQsciScintilla_wrapIndentMode(self: pointer, ): cint {.importc: "QsciScintilla_wrapIndentMode".}
proc fcQsciScintilla_write(self: pointer, io: pointer): bool {.importc: "QsciScintilla_write".}
proc fcQsciScintilla_append(self: pointer, text: struct_miqt_string): void {.importc: "QsciScintilla_append".}
proc fcQsciScintilla_autoCompleteFromAll(self: pointer, ): void {.importc: "QsciScintilla_autoCompleteFromAll".}
proc fcQsciScintilla_autoCompleteFromAPIs(self: pointer, ): void {.importc: "QsciScintilla_autoCompleteFromAPIs".}
proc fcQsciScintilla_autoCompleteFromDocument(self: pointer, ): void {.importc: "QsciScintilla_autoCompleteFromDocument".}
proc fcQsciScintilla_callTip(self: pointer, ): void {.importc: "QsciScintilla_callTip".}
proc fcQsciScintilla_clear(self: pointer, ): void {.importc: "QsciScintilla_clear".}
proc fcQsciScintilla_copy(self: pointer, ): void {.importc: "QsciScintilla_copy".}
proc fcQsciScintilla_cut(self: pointer, ): void {.importc: "QsciScintilla_cut".}
proc fcQsciScintilla_ensureCursorVisible(self: pointer, ): void {.importc: "QsciScintilla_ensureCursorVisible".}
proc fcQsciScintilla_ensureLineVisible(self: pointer, line: cint): void {.importc: "QsciScintilla_ensureLineVisible".}
proc fcQsciScintilla_foldAll(self: pointer, children: bool): void {.importc: "QsciScintilla_foldAll".}
proc fcQsciScintilla_foldLine(self: pointer, line: cint): void {.importc: "QsciScintilla_foldLine".}
proc fcQsciScintilla_indent(self: pointer, line: cint): void {.importc: "QsciScintilla_indent".}
proc fcQsciScintilla_insert(self: pointer, text: struct_miqt_string): void {.importc: "QsciScintilla_insert".}
proc fcQsciScintilla_insertAt(self: pointer, text: struct_miqt_string, line: cint, index: cint): void {.importc: "QsciScintilla_insertAt".}
